--- a/flask_auth_app/project/templates/index.html
+++ b/flask_auth_app/project/templates/index.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+<figure class="image is-128x128">
+  <img src="../static/images/agricultura-inteligente-2.jpg">
+</figure>
 <h1 class="title">
-  Flask Login Example
+  AIDEEP-L ROBOTICS
 </h1>
 <h2 class="subtitle">
-  Easy authentication and authorization in Flask.
+  Sistema de Cultivo Automatizado.
 </h2>
 {% endblock %}
