--- a/flask_auth_app/project/templates/index.html
+++ b/flask_auth_app/project/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<figure class="image is-128x128">
+<figure class="image is-2by1">
   <img src="../images/agricultura-inteligente-2.jpg">
 </figure>
 <h1 class="title">
