--- a/flask_auth_app/project/templates/base.html
+++ b/flask_auth_app/project/templates/base.html
@@ -13,9 +13,9 @@
 		body {
 			text-align: center;
 		}
-        #g3, 
-		#g1,
-		#g2 {
+                #g1, 
+		#g2,
+		#g3 {
 			width: 200px;
 			height: 160px;
 			display: inline-block;
@@ -36,7 +36,7 @@
             <nav class="navbar">
                 <div class="container">
 
-                    <div id="navbarMenuHeroA" class="navbar-menu">
+                    <div id="navbarMenuHeroA" class="navbar-menu is-active">
                         <div class="navbar-end">
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 Home
