--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -55,6 +55,10 @@
   <input name="numSamples" value= {{numSamples}}>
   <input type="submit">
 </form></p>
+<form method="POST">
+  <input name="regar" value={{regar}}>
+  <input type="submit">
+</form>
 <hr>
 <img src="/plot/temp" alt="Image Placeholder" width="49%">
 <img src="/plot/hum" alt="Image Placeholder" width="49%">
