--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -52,13 +52,10 @@
 <h3> HISTORICAL DATA </h3>
 <p> Enter number of samples to retrieve:
 <form method="POST">
-  <input name="numSamples" value= {{numSamples}}>
-  <input type="submit">
+  <!--<input name="numSamples" value= {{numSamples}}>-->
+  <input type="submit" value="Crear usuario" id="evento_nuevo"    name="evento_nuevo" /> 
+  <input type="submit" value="Eliminar usuario" id="evento_eliminar" name="evento_eliminar" />
 </form></p>
-<form method="POST">
-  <input name="regar" value={{regar}}>
-  <input type="submit">
-</form>
 <hr>
 <img src="/plot/temp" alt="Image Placeholder" width="49%">
 <img src="/plot/hum" alt="Image Placeholder" width="49%">
