--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -52,9 +52,11 @@
 <h3> HISTORICAL DATA </h3>
 <p> Enter number of samples to retrieve:
 <form method="POST">
-  <!--<input name="numSamples" value= {{numSamples}}>-->
-  <input type="submit" value="Crear usuario" id="evento_nuevo"    name="evento_nuevo" /> 
-  <input type="submit" value="Eliminar usuario" id="evento_eliminar" name="evento_eliminar" />
+  <input name="numSamples" value= {{numSamples}}>
+  <input type="submit">
+
+  <input type="submit" value="RIEGO MANUAL" id="evento_nuevo"    name="RIEGO MANUAL" /> 
+  <input type="submit" value="VENTILAR" id="evento_eliminar" name="VENTILAR" />
 </form></p>
 <hr>
 <img src="/plot/temp" alt="Image Placeholder" width="49%">
