--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -54,9 +54,9 @@
 <form method="POST">
   <input name="numSamples" value= {{numSamples}}>
   <input type="submit">
-
+<!--
   <input type="submit" value="RIEGO MANUAL" id="riego_manual" name="RIEGO MANUAL" /> 
-  <input type="submit" value="VENTILAR" id="ventilar" name="VENTILAR" />
+  <input type="submit" value="VENTILAR" id="ventilar" name="VENTILAR" />-->
 </form></p>
 <hr>
 <img src="/plot/temp" alt="Image Placeholder" width="49%">
