--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -55,8 +55,8 @@
   <input name="numSamples" value= {{numSamples}}>
   <input type="submit">
 
-  <input type="submit" value="RIEGO_MANUAL" id="riego_manual" name="RIEGO MANUAL" /> 
-  <input type="submit" value="VENTILAR" id="ventilar" name="VENTILAR" />-->
+  <input type="submit" value="riego_manual" id="riego_manual" name="RIEGO MANUAL" /> 
+  <input type="submit" value="riego_manual" id="ventilar" name="VENTILAR" />
 </form></p>
 <hr>
 <img src="/plot/temp" alt="Image Placeholder" width="49%">
