--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -55,8 +55,8 @@
   <input name="numSamples" value= {{numSamples}}>
   <input type="submit">
 
-  <input type="submit" value="1" id="riego_manual" name="RIEGO MANUAL" /> 
-  <input type="submit" value="2" id="ventilar" name="VENTILACION" />
+  <input type="submit" value="riego_manual" id="riego_manual" name="riego_manual" /> 
+  <input type="submit" value="ventilacion" id="ventilar" name="ventilacion" />
 </form></p>
 <hr>
 <img src="/plot/temp" alt="Image Placeholder" width="49%">
