--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -55,12 +55,13 @@
   <input name="numSamples" value= {{numSamples}}>
   <input type="submit">
 </form></p>
+<!--
 <form id="form2" method="POST">
   <input type="submit" value="riego_manual" id="riego_manual" name="riego_manual" /> 
 </form>
 <form id="form3" method="POST">
   <input type="submit" value="ventilacion" id="ventilar" name="ventilacion" />
-</form>
+</form>-->
 <hr>
 <img src="/plot/temp" alt="Image Placeholder" width="49%">
 <img src="/plot/hum" alt="Image Placeholder" width="49%">
