--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -52,8 +52,8 @@
 <h3> HISTORICAL DATA </h3>
 <p> Enter number of samples to retrieve:
 <form id="form1" method="POST">
-  <input name="numSamples" value= {{numSamples}}>
-  <input type="submit">
+  <!--<input name="numSamples" value= {{numSamples}}>-->
+  <input type="submit" id="riego_manual" value="RIEGO MANUAL" name="riego_manual">
 </form></p>
 <!--
 <form id="form2" method="POST">
