--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -53,7 +53,7 @@
 <p> Enter number of samples to retrieve:
 <form id="form1" method="POST">
   <!--<input name="numSamples" value= {{numSamples}}>-->
-  <input type="submit" id="riego_manual" value="RIEGO MANUAL" name="riego_manual">
+  <input type="submit" id="riego_manual" value="RIEGO MANUAL" name="riego_manual" class="button">
 </form></p>
 <!--
 <form id="form2" method="POST">
