--- a/flask_auth_app/project/templates/profile.html
+++ b/flask_auth_app/project/templates/profile.html
@@ -31,12 +31,12 @@
     });
     g3 = new JustGage({
       id: "g3",
-      value: {{hum}},
+      value: {{hgr}},
       valueFontColor: "yellow",
       titleFontColor: "yellow",
       min: '0',
       max: '100',
-      title: "Humidity Ground",
+      title: "HGR",
       label: "%"
     });    
   
